# personal-trainer

./: .env.example  .gitignore  .vercelignore  AGENTS.md  README.md  fitness-command-center-codex-brief.md  package.json  pnpm-lock.yaml  tsconfig.base.json  vercel.json
agents/: coach.md  health.md  nutrition.md  planner.md  recovery.md  shared-rules.md  training.md
apps/web/: next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/app/dashboard/: page.tsx
apps/web/src/app/nutrition/: page.tsx
apps/web/src/app/progress/: page.tsx
apps/web/src/app/recovery/: page.tsx
apps/web/src/app/training/: page.tsx
apps/web/src/components/: manual-sync-button.tsx  metric-card.tsx  shell.tsx  trend-chart.tsx
apps/web/src/lib/: ai-briefing.ts  coach-agent-loader.ts  daily-sync.ts  day-context.ts  nutrition-data.ts  recovery-data.ts  supabase-admin.ts  training-data.ts
apps/web/src/types/: totem.d.ts
apps/worker/: package.json
apps/worker/src/: env.ts  index.ts
apps/worker/src/providers/: index.ts
apps/worker/src/providers/nutrition/: csv.ts  myfitnesspal.ts
apps/worker/src/providers/training/: hevy.ts
apps/worker/src/providers/whoop/: totem.ts
apps/worker/src/sync/: hevy.ts  index.ts  mfp.ts  renpho.ts  supabase.ts  whoop.ts
docs/: architecture.md  data-model.md  integrations.md  operations.md
infra/: compose.yaml
infra/docker/: worker.Dockerfile
services/mfp/: pyproject.toml
services/mfp/fitness_mfp/: api.py  cli.py  renpho_cli.py
services/mfp/tests/: test_cli.py
(+3 files in other folders)
